# DBgen

./: .gitignore  CMakeLists.txt  Database_Maker.cc  LICENSE.md  Makefile  README.md  compile.bat  compile.sh  instructions.txt  sequence2.gb
Database_Maker/: Database_Maker.cc
Database_Merger/: CMakeLists.txt  Database_Merger.cc
Database_Toolkit_Mac/: mac  mac_compile.cc  run
Database_Toolkit_Mac/Binaries/: Binaries.txt  dbMaker  fastaEdit  gbEdit  invalid  merge  mergeUniques  trimWhite
Database_Toolkit_Mac/IOParameters/: fastaEdit.txt  gbEdit.txt  trimWhitef.txt  trimWhiteg.txt
Database_Toolkit_Mac/Make_Database/Input/: sequence.fasta
Database_Toolkit_Mac/Make_Database/Output/: finished.fasta
Database_Toolkit_Mac/Merge_Database/Output/: Repeats.fasta
Database_Toolkit_Mac/Source/DBMaker/: dbMaker.cc
Database_Toolkit_Mac/Source/FastaEditor/: fastaEdit.cc
Database_Toolkit_Mac/Source/GBEditor/: gbEdit.cc
Database_Toolkit_Mac/Source/Merge/: Makefile  merge.cc
Database_Toolkit_Mac/Source/MergeUniques/: Makefile
Database_Toolkit_Mac/Source/Run/: run.cc
Database_Toolkit_Mac/Source/TrimWhite/: Makefile
Database_Toolkit_Unix/: linux  linux_compiler.cc  run
Database_Toolkit_Unix/Binaries/: dbMaker  fastaEdit  gbEdit  invalid  merge  mergeUniques  trimWhite
Database_Toolkit_Unix/IOParameters/: invalid.txt  mergeDB.txt
Database_Toolkit_Unix/Make_Database/Input/: sequence.gb
Database_Toolkit_Unix/Merge_Database/Output/: Uniques.fasta
Database_Toolkit_Unix/Source/DBMaker/: Makefile  dbMaker.cc
Database_Toolkit_Unix/Source/FindInvalids/: invalid.cc
Database_Toolkit_Unix/Source/GBEditor/: Makefile
Database_Toolkit_Unix/Source/Merge/: merge.cc
Database_Toolkit_Windows/: windows_compiler.cc
Database_Toolkit_Windows/IOParameters/: fastaEdit.txt  gbEdit.txt  invalid.txt  mergeDB.txt  trimWhitef.txt  trimWhiteg.txt
Database_Toolkit_Windows/Make_Database/Output/: invalid.fasta  valid.fasta
Database_Toolkit_Windows/Source/DBMaker/: dbMaker.cc
Database_Toolkit_Windows/Source/FastaEditor/: Makefile
Database_Toolkit_Windows/Source/FindInvalids/: invalid.cc
Database_Toolkit_Windows/Source/GBEditor/: gbEdit.cc
Database_Toolkit_Windows/Source/MergeUniques/: mergeUniques.cc
Database_Toolkit_Windows/Source/Run/: run.cc
Database_Toolkit_Windows/Source/TrimWhite/: trimWhite.cc
Source/: compile_all.cc
Source/FindInvalids/: Makefile
Source/MergeUniques/: mergeUniques.cc
Source/Run/: Makefile
src/: CMakeLists.txt  Info.plist
src/core/: make.cpp  make.h  merge.cpp  merge.h
src/gui/: about.cpp  about.h  app.cpp  app.h  listbox.cpp  listbox.h  menu.cpp  menu.h  options.cpp  options.h  preferences.cpp  preferences.h  window.cpp  window.h
src/lib/wxWidgets/: CMakeLists.txt
src/util/: utilities.cpp  utilities.h
